# CentroidTracker

./: .gitignore  CMakeLists.txt  README.MD
include/: CentroidTracker.hpp
src/: CentroidTracker.cpp  Main.cpp
